@startuml Diagrama de clases


class Usuario {
    +idUsuario: int
    +nombre: String
    +correo: String
    +rol: Rol
    +perfil: String
    +eventosCreados: List<Evento>
}

class Calendario {
    +idCalendario: int
    +eventos: List<Evento>
    +meses: List<string>
    +dias: List<int>
    +anios: List<int>
}

class Evento {
    +idEvento: int
    +titulo: String
    +descripcion: String
    +fechaHoraInicio: DateTime
    +fechaHoraFin: DateTime
    +ubicacion: String
    +categoria: Categoria
    +estado: String
    +creador: Usuario
    +listaComentarios: List<Comentario>
}

class Comentario {
    +idComentario: int
    +texto: String
    +fechaCreacion: DateTime
    +autor: Usuario
}

class Categoria {
    +idCategoria: int
    +nombre: String
    +eventos: List<Evento>
}

class Notificacion {
    +idNotificacion: int
    +mensaje: String
    +fechaEnvio: DateTime
    +destinatario: Usuario
}

class Rol{
    +idRol: int
    +nombre: String
}

Usuario "1..*" -- "0..*" Evento : gestiona
Usuario "1..*" -- "0..*" Comentario : escribe
Usuario "1..*" -- "1" Rol : tiene
Evento "1" o-- "0..*" Comentario : contiene
Evento "1" o-- "1..*" Categoria : pertenece
Usuario "1" -- "0..*" Notificacion : recibe
Usuario "1" -- "1" Calendario : puede ver
Calendario "1..*" o-- "0..*" Evento: muestra

@enduml